# febgp

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
debian/: febgp.service  postinst  postrm  prerm
docs/: configuration.md  implementation-status.md  testing.md
proto/: febgp.proto
src/: bgp.rs  config.rs  daemon.rs  error.rs  febgp.rs  lib.rs  main.rs  metrics.rs  neighbor_discovery.rs  netlink.rs  peer_manager.rs  rib.rs  session.rs
src/api/: client.rs  mod.rs  server.rs
src/bgp/: message.rs  mod.rs  session.rs  session_actor.rs  update.rs
src/bgp/fsm/: action.rs  error.rs  event.rs  mod.rs  state.rs  validation.rs
src/bgp/transport/: mock.rs  mod.rs  tcp.rs
src/daemon/: mod.rs  startup.rs
tests/: bgp_tests.rs  gobgp_to_gobgp.rs
tests-integration/: Cargo.toml
tests-integration/src/: febgp_to_gobgp.rs  neighbor_discovery.rs
tests-integration/src/common/: gobgp.rs  netns.rs
tests/common/: gobgp.rs  mod.rs  netns.rs
