[package]
name = "febgp"
version = "0.1.0"
edition = "2021"
description = "FeBGP - A BGP daemon in Rust"

[[bin]]
name = "febgp"
path = "src/main.rs"

[lib]
name = "febgp"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tower = { version = "0.5", default-features = false, features = ["util"] }
hyper-util = "0.1"
nix = { version = "0.30.1", features = ["net"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[workspace]
members = ["tests-integration"]

[workspace.dependencies]
serde_json = "1"
tempfile = "3"
libc = "0.2"
