[package]
name = "febgp"
version = "0.1.4"
edition = "2021"
description = "FeBGP - A BGP daemon in Rust"
license = "Apache-2.0"
repository = "https://github.com/maltej/febgp"
readme = "README.md"

[package.metadata.deb]
maintainer = "FeBGP Maintainers"
copyright = "2024 FeBGP Authors"
extended-description = """\
A BGP daemon written in Rust, designed for BGP unnumbered deployments.
Supports BGP-4, 4-octet ASN, IPv6, and FIB installation via netlink."""
section = "net"
priority = "optional"
assets = [
    ["target/release/febgp", "/usr/sbin/", "755"],
    ["dist/config.toml", "/etc/febgp/config.toml", "644"],
    ["dist/febgp.service", "/lib/systemd/system/febgp.service", "644"],
]
conf-files = ["/etc/febgp/config.toml"]
maintainer-scripts = "debian/"

[[bin]]
name = "febgp"
path = "src/main.rs"

[lib]
name = "febgp"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tower = { version = "0.5", default-features = false, features = ["util"] }
hyper-util = "0.1"
nix = { version = "0.30.1", features = ["net"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
rtnetlink = "0.20"
netlink-packet-route = "0.28"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[workspace]
members = ["tests-integration"]

[workspace.dependencies]
serde_json = "1"
tempfile = "3"
libc = "0.2"
