[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
febgp = { path = ".." }
serde_json = { workspace = true }
tempfile = { workspace = true }
nix = { version = "0.30.1", features = ["user"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[[bin]]
name = "febgp-connect"
path = "src/bin/febgp_connect.rs"

[[test]]
name = "febgp_to_gobgp"
path = "src/febgp_to_gobgp.rs"
harness = true
